# OpenCL-ICD-Loader

./: CMakeLists.txt
